added tag pages

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,18 +9,18 @@ html
     .ui.inverted.menu
       .ui.container
         .item
-          a All
+          a href="/" All
         .item
-          a New
+          a href="/new" New
         .item
-          a # Ask
+          a href="/ask" # Ask
         .item
-          a # Buy/Sell
+          a href="/buysell" # Buy/Sell
         .item
-          a # Events
+          a href="/events" # Events
         .right.menu
           .item
-            a Me
+            a href="/user" Me
           .item
             a Readme
     = yield
