--- a/app/views/post/_comment.slim
+++ b/app/views/post/_comment.slim
@@ -1,22 +1,23 @@
-.comment
-	.content
-		a.author = comment.user.email
-		.metadata
-			span = comment.created_at
+- if !(comment.deleted)
+	.comment
+		.content
+			a.author = comment.user.email
+			.metadata
+				span = comment.created_at
 
-		.text = comment.content
-		.actions
-			a onclick="toggle_comment(#{comment.id})" Reply
-			
-		form.ui.reply.form action="new_comment" method="post" data-comment-id=comment.id
-			input type="hidden" name="parent_comment" value=comment.id
-			= hidden_field_tag :authenticity_token, form_authenticity_token
-			.field
-				textarea name="content"
-			input.ui.blue.tiny.submit.button type="submit" value="Add Reply"
+			.text = comment.content
+			.actions
+				a onclick="toggle_comment(#{comment.id})" Reply
+				- if @user == comment.user
+					= link_to "Delete", "/delete_comment/#{comment.id}", :method => :delete
+			form.ui.reply.form action="new_comment" method="post" data-comment-id=comment.id
+				input type="hidden" name="parent_comment" value=comment.id
+				= hidden_field_tag :authenticity_token, form_authenticity_token
+				.field
+					textarea name="content"
+				input.ui.blue.tiny.submit.button type="submit" value="Add Reply"
 
-	- unless comment.children_comments.empty?
-		.comments
-			- comment.children_comments.each do |c|
-				= render "post/comment", comment: c
-	
+		- unless comment.children_comments.empty?
+			.comments
+				- comment.children_comments.each do |c|
+					= render "post/comment", comment: c
