--- a/app/views/user/index.slim
+++ b/app/views/user/index.slim
@@ -5,6 +5,7 @@
 		form action="/user/sign_out" method="delete"
 			= hidden_field_tag :authenticity_token, form_authenticity_token
 			= link_to "Sign out", destroy_user_session_path, :method => :delete
+		a href="/users/edit" Edit Account (email/password)
 		h3 My Posts
 		.ui.feed
 		- @user.posts.each do |post|
