--- a/app/views/post/index.slim
+++ b/app/views/post/index.slim
@@ -18,7 +18,7 @@ coffee:
 					.summary
 						a href="post/#{post.id}/"  = post.title
 					.meta
-						| Posted #{post.created_at} | 
+						| Posted #{pretty_time post.created_at} | 
 						| #{if post.tag then post.tag.name else "Misc"} | 
 						| #{post.user.email} | 
 						| #{post.upvotes} Likes | 
