put container in layout for prettier devise pages

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,7 +29,8 @@ html
               a href="/users/sign_in" Login / Sign Up
           .item
             a Readme
-    = yield
+    .ui.main.container
+      = yield
     
     
     coffee:
